--- a/HowIdidIT.csproj
+++ b/HowIdidIT.csproj
@@ -20,6 +20,7 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Folder Include="Migrations" />
       <Folder Include="wwwroot\js" />
       <Folder Include="wwwroot\lib\bootstrap\css" />
     </ItemGroup>
