--- a/HowIdidIT.csproj
+++ b/HowIdidIT.csproj
@@ -25,6 +25,13 @@
     </ItemGroup>
 
     <ItemGroup>
+      <Content Include="Views\section.html">
+        <ExcludeFromSingleFile>true</ExcludeFromSingleFile>
+        <CopyToPublishDirectory>PreserveNewest</CopyToPublishDirectory>
+      </Content>
+    </ItemGroup>
+
+    <ItemGroup>
       <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
       <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.8" />
       <PackageReference Include="Microsoft.AspNetCore.Cors" Version="2.2.0" />
@@ -39,12 +46,6 @@
       <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="6.0.3" />
       <PackageReference Include="Swashbuckle.AspNetCore" Version="6.3.1" />
-    </ItemGroup>
-
-    <ItemGroup>
-      <None Remove="Views\registration.html" />
-      <None Remove="Views\login.html" />
-      <None Remove="Views\discussion.html" />
     </ItemGroup>
 
 </Project>
